fix the fill gaps question gap resizing handles positioning

--- a/src/features/TestConstructor/ui/Question/FIllGapsQuestion/FillGapsQuestion.module.css
+++ b/src/features/TestConstructor/ui/Question/FIllGapsQuestion/FillGapsQuestion.module.css
@@ -105,7 +105,7 @@ textarea.textarea:focus {
 }
 
 .gap__size-handle:nth-of-type(2) {
-    right: calc(-1 * var(--width) + 4px);
+    left: var(--last-row-right);
     border-top-right-radius: var(--radius-s);
     border-bottom-right-radius: var(--radius-s);
     padding-left: 4px;
